--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ p{
     background: #3B5998;
     color: white;
   }
-  .fa-twitter {
+  .fa-github {
     background: #55ACEE;
     color: white;
   }    
